# ghostclaw

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  README.md  docker-compose.yml  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
benches/: CMakeLists.txt  bench_common.hpp  bench_main.cpp  config_bench.cpp  memory_bench.cpp  performance_bench.cpp  prompt_bench.cpp  startup_bench.cpp
cmake/: Doxygen.cmake
cmake/toolchains/: aarch64-apple-darwin.cmake  x86_64-apple-darwin.cmake  x86_64-linux-gnu.cmake
docs/: README.md
include/ghostclaw/agent/: context.hpp  engine.hpp  message_queue.hpp  session.hpp  stream_parser.hpp  tool_executor.hpp
include/ghostclaw/auth/: oauth.hpp
include/ghostclaw/browser/: actions.hpp  cdp.hpp  chrome.hpp  profiles.hpp  server.hpp
include/ghostclaw/calendar/: backend.hpp
include/ghostclaw/canvas/: host.hpp
include/ghostclaw/channels/: allowlist.hpp  channel.hpp  channel_manager.hpp  cli_channel.hpp  cli_plugin.hpp  plugin.hpp  plugin_adapter.hpp  plugin_registry.hpp  send_service.hpp  supervisor.hpp
include/ghostclaw/cli/: commands.hpp
include/ghostclaw/common/: fs.hpp  json_util.hpp  result.hpp  toml.hpp
include/ghostclaw/config/: config.hpp  schema.hpp
include/ghostclaw/daemon/: daemon.hpp  pid_file.hpp  state_writer.hpp
include/ghostclaw/doctor/: diagnostics.hpp  module.hpp
include/ghostclaw/email/: backend.hpp
include/ghostclaw/gateway/: protocol.hpp  server.hpp  websocket.hpp
include/ghostclaw/health/: health.hpp
include/ghostclaw/heartbeat/: cron.hpp  cron_store.hpp  engine.hpp  scheduler.hpp
include/ghostclaw/identity/: aieos.hpp  factory.hpp  identity.hpp  module.hpp  openclaw.hpp  templates.hpp
include/ghostclaw/integrations/: registry.hpp
include/ghostclaw/memory/: chunker.hpp  embedder.hpp  embedder_local.hpp  embedder_noop.hpp  embedder_openai.hpp  hybrid_ranker.hpp  markdown_store.hpp  memory.hpp  mod.hpp  sqlite_store.hpp  vector_index.hpp  workspace_indexer.hpp
include/ghostclaw/nodes/: discovery.hpp  node.hpp
include/ghostclaw/observability/: factory.hpp  global.hpp  log_observer.hpp  module.hpp  multi_observer.hpp  noop_observer.hpp  observer.hpp
include/ghostclaw/onboard/: wizard.hpp
include/ghostclaw/plugin/: plugin.h
include/ghostclaw/providers/: anthropic.hpp  compatible.hpp  factory.hpp  mod.hpp  ollama.hpp  openai.hpp  openrouter.hpp  reliable.hpp  traits.hpp
include/ghostclaw/runtime/: app.hpp
include/ghostclaw/sandbox/: docker.hpp  mod.hpp  sandbox.hpp
include/ghostclaw/security/: action_tracker.hpp  approval.hpp  external_content.hpp  mod.hpp  pairing.hpp  policy.hpp  secrets.hpp  tool_policy.hpp
include/ghostclaw/sessions/: send_policy.hpp  session.hpp  session_key.hpp  store.hpp  transcript.hpp
include/ghostclaw/skills/: compat.hpp  import_openclaw.hpp  (+3 more)
packaging/homebrew/: ghostclaw.rb
scripts/: build-all-targets.sh  bump-version.sh  coverage.sh  generate-checksums.sh
src/: main.cpp
src/agent/: context.cpp  engine.cpp  message_queue.cpp  mod.cpp  module.cpp  session.cpp  stream_parser.cpp  tool_executor.cpp
src/auth/: oauth.cpp
src/browser/: actions.cpp  cdp.cpp  chrome.cpp  profiles.cpp  server.cpp
src/calendar/: eventkit_backend.mm  gog_backend.cpp
src/canvas/: host.cpp
src/channels/: allowlist.cpp  channel_manager.cpp  cli_channel.cpp  cli_plugin.cpp  plugin_adapter.cpp  plugin_registry.cpp  send_service.cpp  supervisor.cpp
src/cli/: commands.cpp
src/common/: fs.cpp  json_util.cpp  toml.cpp
src/config/: config.cpp  schema.cpp
src/daemon/: daemon.cpp  pid_file.cpp  state_writer.cpp
src/doctor/: diagnostics.cpp  module.cpp
src/email/: gog_backend.cpp  mailapp_backend.cpp  smtp_backend.cpp
src/gateway/: protocol.cpp  server.cpp  websocket.cpp
src/health/: health.cpp
src/heartbeat/: cron.cpp  cron_store.cpp  engine.cpp  scheduler.cpp
src/identity/: aieos.cpp  factory.cpp  identity.cpp  module.cpp  openclaw.cpp  templates.cpp
src/integrations/: registry.cpp
src/memory/: chunker.cpp  embedder.cpp  embedder_local.cpp  embedder_noop.cpp  embedder_openai.cpp  hybrid_ranker.cpp  markdown_store.cpp  memory.cpp  mod.cpp  sqlite_store.cpp  vector_index.cpp  workspace_indexer.cpp
src/nodes/: discovery.cpp  node.cpp
src/observability/: factory.cpp  global.cpp  log_observer.cpp  module.cpp  multi_observer.cpp
src/onboard/: wizard.cpp
src/providers/: anthropic.cpp  compatible.cpp  factory.cpp  mod.cpp  ollama.cpp  openai.cpp  openrouter.cpp  reliable.cpp  traits.cpp
src/runtime/: app.cpp
src/sandbox/: docker.cpp  sandbox.cpp
src/security/: action_tracker.cpp  approval.cpp  external_content.cpp  mod.cpp  pairing.cpp  patterns.cpp  policy.cpp  secrets.cpp  tool_policy_pipeline.cpp
src/sessions/: send_policy.cpp  session.cpp  session_key.cpp  store.cpp  transcript.cpp
src/skills/: compat.cpp  import_openclaw.cpp  loader.cpp  module.cpp  registry.cpp
src/tools/: approval.cpp  mod.cpp  policy.cpp  tool.cpp  tool_registry.cpp
src/tts/: elevenlabs.cpp  system.cpp  tts.cpp
src/tunnel/: cloudflare.cpp  custom.cpp  factory.cpp  module.cpp  ngrok.cpp  process.cpp  tailscale.cpp
src/voice/: wake.cpp
tests/: test_agent.cpp  test_browser.cpp  test_channels.cpp  test_cli_onboard.cpp  test_config.cpp  test_daemon.cpp  test_framework.hpp  test_gateway.cpp  test_heartbeat.cpp  test_identity.cpp  test_main.cpp  test_memory.cpp  test_observability_health_doctor.cpp  test_providers.cpp  test_security.cpp  test_sessions.cpp  test_sessions_tools_nodes.cpp  test_skills_integrations.cpp  test_tools.cpp  test_tts_voice.cpp  test_tunnel.cpp
tests/e2e/: test_cli.sh  test_daemon.sh  test_telegram_e2e.py
tests/helpers/: test_helpers.cpp  test_helpers.hpp
tests/integration/: test_agent_integration.cpp  test_config_integration.cpp  test_cron_integration.cpp  test_full_integration.cpp  test_gateway_integration.cpp  test_security_integration.cpp  test_skills_integration.cpp
(+72 files in other folders)
